--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     background-color: black;
     font-family:’Paytone One’, sans-serif;
     font-size:12pt;
+    color:aqua;
 }
 h1 {
 font-size:30pt;
